--- a/motoman_resources/package.xml
+++ b/motoman_resources/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>motoman_resources</name>
-  <version>0.3.5</version>
+  <version>1.3.1</version>
   <description>
     <p>Shared configuration data, 3D models, launch files materials, etc. for motoman robots.</p>
     <p>
@@ -22,7 +22,7 @@
   <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
   <url type="repository">https://github.com/ros-industrial/motoman</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <export>
     <architecture_independent/>
