--- a/motoman_gp7_support/CMakeLists.txt
+++ b/motoman_gp7_support/CMakeLists.txt
@@ -1,15 +1,22 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
 
 project(motoman_gp7_support)
 
-find_package(catkin REQUIRED)
+find_package(ament_cmake REQUIRED)
 
-catkin_package()
 
-if (CATKIN_ENABLE_TESTING)
-  find_package(roslaunch REQUIRED)
-  roslaunch_add_file_check(test/launch_test.xml)
-endif()
+#if (CATKIN_ENABLE_TESTING)
+#  find_package(roslaunch REQUIRED)
+#  roslaunch_add_file_check(test/launch_test.xml)
+#endif()
 
-install(DIRECTORY config launch meshes urdf
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+install(DIRECTORY config/ 
+  DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY launch/ 
+  DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY meshes/
+  DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY urdf/
+  DESTINATION share/${PROJECT_NAME})
+
+ament_package()
