--- a/motoman_gp7_support/package.xml
+++ b/motoman_gp7_support/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>motoman_gp7_support</name>
-  <version>0.3.5</version>
+  <version>1.3.1</version>
   <description>
     <p>ROS-Industrial support for the Motoman GP7 (and variants).</p>
     <p>
@@ -37,7 +37,8 @@
   <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
   <url type="repository">https://github.com/ros-industrial/motoman</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
   <test_depend>roslaunch</test_depend>
 
